--- a/index.html
+++ b/index.html
@@ -11,14 +11,18 @@
 
 <body>
     <h1>404 NOT FOUND</h1>
-    <div class="bodyy">
-        <div class="left"><img src="image.png" alt=""></div>
+
+    <div class="block">
+        <div class="left"><img src="Scarecrow.png" alt=""></div>
+
         <div class="right">
             <h2>I have bad news for you</h2>
             <p>The page you are looking for might be revered or is temporily unavailable</p>
-            <button>BACK TO HOMEPAGE</button>
+            <button><a href="https://github.com/ErnarShamet">BACK TO HOMEPAGE</a></button>
         </div>
     </div>
+
+    <footer>create by username - <a href="https://github.com/ErnarShamet">Ernar Shamet</a></footer>
 </body>
 
 </html>
