--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>404 Not found</title>
-    <link rel="stylesheet" href="projct1.css">
+    <link rel="stylesheet" href="prjct1.css">
 </head>
 
 <body>
@@ -22,7 +22,7 @@
         </div>
     </div>
 
-    <footer>create by username - <a href="https://github.com/ErnarShamet">Ernar Shamet</a></footer>
+    <footer>create by<a href="https://github.com/ErnarShamet"> username </a>- devChallenges.i</footer>
 </body>
 
 </html>
